--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# eclipse project files
+.settings/
+.classpath
+.project
+bin/
+
+# IntelliJ project files
+*.iml
+*.iws
+*.ipr
+.idea/
